# subjective-c

./: .gitignore  CMakeLists.txt  CMakeProjectFiles.cmake  CTestConfig.cmake  Makefile  README.md
apps/: CMakeLists.txt
apps/impaste/: CMakeLists.txt  impaste.hh  impaste.mm
apps/libimread-config/: main.cpp
apps/subjective-c-config/: CMakeLists.txt  main.cpp  subjective-c-config.h
categories/: NSBitmapImageRep+IM.mm  NSColor+IM.mm  NSData+IM.mm  NSDictionary+IM.mm  NSImage+CGImage.m  NSImage+QuickLook.m  NSImage+Resize.m  NSImage+ResizeBestFit.m  NSString+STL.mm  NSURL+IM.mm
classes/: AXCoreGraphicsImageRep.m  AXInterleavedImageRep.mm
cmake/: build_config.cmake  subjective-c-config.cmake  subjectivecConfig.cmake
include/subjective-c/: appkit-pasteboard.hh  appkit.hh  demangle.hh  maptable.hh  message-args.hh  message.hh  namespace-im.hh  namespace-std.hh  object.hh  rehash.hh  selector.hh  subjective-c.hh  subjective-c.hpp.in  system.hh  traits.hh  types.hh
include/subjective-c/categories/: NSBitmapImageRep+IM.hh  NSColor+IM.hh  NSData+IM.hh  NSDictionary+IM.hh  NSString+STL.hh  NSURL+IM.hh
include/subjective-c/classes/: AXCoreGraphicsImageRep.h  AXInterleavedImageRep.hh
include/subjective-c/ext/categories/: NSURL+path.hh
include/subjective-c/ext/filesystem/: directory.h  mode.h  opaques.h  path.h  resolver.h  temporary.h
mgmt/: clean.sh  dump-function-calls.py  parallel-run-tests.sh  run-tests.sh  sync-test-data.sh  update-iod.sh
src/: demangle.cc  maptable.mm  namespace-std.mm  selector.mm  system.mm  traits.mm  types.mm
src/subjective-c/: appkit-pasteboard.mm  namespace-std.mm  traits.mm  types.mm
src/subjective-c/ext/categories/: NSURL+path.mm
src/subjective-c/ext/filesystem/: opaques.cpp  path.cpp  temporary.cpp
tests/: CMakeLists.txt  test_appkit_copy_paste.mm  test_apple_io.mm  test_imageformat_options.mm  test_impaste_clt.mm  test_json_block_traverse.mm  test_nsdictionary_options_map.mm  test_nsurl_image_types.mm  test_objc_rt.mm  test_sfinae.mm  test_sszip.mm
tests/helpers/: AXTestReceiver.h  AXTestReceiver.mm  IMTestReceiver.h  IMTestReceiver.m
